# TL-Group

./: .env  .env.example  README.md  pyproject.toml
app/: settings.py  urls.py
organization/: admin.py  models.py  views.py
organization/migrations/: 0001_initial.py
templates/: base.html  department_tree.html  employee_list.html
